feat: delete participant
